syntax = "proto3";

option csharp_namespace = "UserManagementService.Protos";

service UserServiceProto {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
}

message RegisterUserRequest {
  string username = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
}

message RegisterUserResponse {
  bool success = 1;
  string message = 2;
}

message UpdateUserRequest {
  string user_id = 1;
  string role = 2;
}

message UpdateUserResponse {
  bool success = 1;
  string message = 2;
}
